# ironflow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
benchmarks/: METHODOLOGY.md  benchmark_runner.py  generate_dags.py  ironflow_dag.json
dags/: data_validation.toml  etl_pipeline.toml  parallel_processing.toml  simple_etl.toml
examples/: 01_sequential.toml  02_parallel.toml  03_http_operator.toml
src/: config.rs  lib.rs  main.rs
src/api/: routes.rs
src/cli/: mod.rs
src/dag/: definition.rs  mod.rs  parser.rs  validator.rs  watcher.rs
src/executor/: mod.rs
src/operators/: bash.rs  http.rs  mod.rs  python.rs  slack.rs  sql.rs
src/scheduler/: mod.rs
src/store/: mod.rs
src/ui/: mod.rs
